# pdfveil-cli

./: .gitignore  README.md  SECURITY.md  main.py  pdfveil.magic  pdfveil.magic.mgc  pdfveil_magic.mgc  public.key  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
debian/: changelog  control  copyright  files  install  pdfveil.1  postinst  rules
debian/pdfveil/DEBIAN/: control  md5sums
debian/pdfveil/usr/lib/python3.12/dist-packages/pdfveil/: cli.py  decryptor.py  logo.py  utils.py
debian/pdfveil/usr/lib/python3.12/dist-packages/pdfveil-0.1.0.dist-info/: METADATA  RECORD  entry_points.txt
debian/pdfveil/usr/lib/python3.12/dist-packages/pdfveil-0.2.0.dist-info/: METADATA  RECORD
debian/pdfveil/usr/lib/python3.13/dist-packages/pdfveil/: encryptor.py
debian/pdfveil/usr/lib/python3.13/dist-packages/pdfveil-0.1.0.dist-info/: METADATA  RECORD  top_level.txt
debian/pdfveil/usr/lib/python3.13/dist-packages/pdfveil-0.2.0.dist-info/: RECORD
debian/pdfveil/usr/share/doc/pdfveil/: copyright
debian/source/: options
pdfveil/: cli.py  decryptor.py  encryptor.py  logo.py  utils.py
tests/: test_decryptor.py  test_encryptor.py
tests/system/: test_manpage.py
tests/test_files/: sample.txt
